AGAIN: fix scrollbar in the middle of the screen in mobile preview

--- a/assets/stylesheets/mobile/discourse-basic-editor.scss
+++ b/assets/stylesheets/mobile/discourse-basic-editor.scss
@@ -1,6 +1,10 @@
 .discourse-basic-editor {
 }
 /* Element | http://0.0.0.0:9292/ */
+.b-editor-fifty{
+  display: none;
+  visibility: hidden;
+}
 
 .b-editor-textarea-wrapper {
   /* display: flex\\; */
